<resources>
    <string name="app_name">GithubUser</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="image_detail">Image Profile User</string>
    <string name="repository">Repository</string>
    <string name="menu">Menu</string>
    <string name="text_bagikan_profil">Bagikan profil</string>
    <string name="more">… selengkapnya</string>
    <string name="no_users">No User</string>
    <string name="no_repos">No Repo</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="text_issues">Issues</string>
    <string name="watchers">Watchers</string>
    <string name="text_network">Networks</string>
    <string name="text_description">Description</string>
    <string name="stars">%s stars</string>
    <string name="forks">%s forks</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="text_unknown"><i>Unknown</i></string>

    <string name="text_tv_titlee"><font size="20">%1$s</font> <font size="12">%2$2</font></string>
    <string name="text_tv_title"><annotation fontSize="30">%1$s</annotation> %2$s</string>
    <string name="text_title_repo">
        <![CDATA[
         <big size="35">%1$s</big> <small>%2$s</small>
        ]]>
    </string>
    <string name="jh">
        <![CDATA[
         %s Multiple style inside android textView: bold text: <b>bold
         text</b>, italicText text: <i>italic text</i>, small font:
         <small>small text</small>,
         font color: <font color="blue"<Text Color</font<, font
         color with bold text: <font color="green"><b>Bold with font
         color</b></font>
        ]]>
    </string>
    <string name="text_last_updated">Last updated</string>
</resources>