<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_repo_name"
        style="@style/TextStyle.Bold"
        android:textSize="@dimen/text_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Movie-Catalogue" />

    <TextView
        android:id="@+id/repo_url"
        style="@style/TextStyle"
        android:layout_marginTop="8dp"
        android:textColor="@color/link"
        app:layout_constraintStart_toStartOf="@id/tv_repo_name"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_name"
        tools:text="rijalmyd/movie-catalogue"/>

    <TextView
        android:id="@+id/tv_stars"
        style="@style/TextStyle"
        android:layout_marginTop="24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_baseline_star_border_24"
        app:layout_constraintStart_toStartOf="@id/repo_url"
        app:layout_constraintTop_toBottomOf="@id/repo_url"
        tools:text="5 stars" />

    <TextView
        android:id="@+id/tv_forks"
        style="@style/TextStyle"
        android:layout_marginStart="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_forks"
        app:drawableTint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="@id/tv_stars"
        app:layout_constraintStart_toEndOf="@id/tv_stars"
        app:layout_constraintTop_toTopOf="@id/tv_stars"
        tools:text="5 forks" />

    <TextView
        android:id="@+id/tv_language"
        style="@style/TextStyle"
        android:layout_marginStart="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_forks"
        app:layout_constraintStart_toEndOf="@id/tv_forks"
        app:layout_constraintTop_toTopOf="@id/tv_forks"
        tools:text="Kotlin" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="0.05dp"
        android:layout_marginTop="16dp"
        android:background="@color/bg_horizontal_line"
        app:layout_constraintEnd_toEndOf="@id/tv_issues_count"
        app:layout_constraintStart_toStartOf="@id/tv_stars"
        app:layout_constraintTop_toBottomOf="@id/tv_stars" />


    <TextView
        android:id="@+id/text_last_updated"
        style="@style/TextStyle"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/text_last_updated"
        app:drawableStartCompat="@drawable/ic_time"
        app:layout_constraintEnd_toStartOf="@+id/tv_last_updated"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/tv_last_updated"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_last_updated"
        app:layout_constraintTop_toTopOf="@id/text_last_updated"
        app:layout_constraintBottom_toBottomOf="@id/text_last_updated"
        tools:text="3 days ago" />

    <TextView
        android:id="@+id/text_issue"
        style="@style/TextStyle"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/text_issues"
        app:drawableStartCompat="@drawable/ic_issues"
        app:layout_constraintEnd_toStartOf="@+id/tv_issues_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_last_updated" />

    <TextView
        android:id="@+id/tv_issues_count"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_issue"
        app:layout_constraintTop_toTopOf="@id/text_issue"
        app:layout_constraintBottom_toBottomOf="@id/text_issue"
        tools:text="10" />

    <TextView
        android:id="@+id/text_watchers"
        style="@style/TextStyle"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/watchers"
        app:drawableStartCompat="@drawable/ic_watchers"
        app:layout_constraintEnd_toStartOf="@+id/tv_watchers_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_issue" />

    <TextView
        android:id="@+id/tv_watchers_count"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_watchers"
        app:layout_constraintTop_toTopOf="@id/text_watchers"
        app:layout_constraintBottom_toBottomOf="@id/text_watchers"
        tools:text="6" />

    <TextView
        android:id="@+id/text_network"
        style="@style/TextStyle"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/text_network"
        app:drawableStartCompat="@drawable/ic_networks"
        app:layout_constraintEnd_toStartOf="@+id/tv_network_count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_watchers" />

    <TextView
        android:id="@+id/tv_network_count"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_network"
        app:layout_constraintTop_toTopOf="@id/text_network"
        app:layout_constraintBottom_toBottomOf="@id/text_network"
        tools:text="23" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="0.05dp"
        android:layout_marginTop="24dp"
        android:background="@color/bg_horizontal_line"
        app:layout_constraintEnd_toEndOf="@id/tv_network_count"
        app:layout_constraintStart_toStartOf="@id/text_network"
        app:layout_constraintTop_toBottomOf="@id/text_network" />

    <TextView
        android:id="@+id/text_description"
        style="@style/TextStyle.Bold"
        android:text="@string/text_description"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="@id/text_network"/>

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextStyle"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4dp"
        android:lineSpacingMultiplier="1.2"
        android:textIsSelectable="true"
        tools:text="Ini adalah deskripsi"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_topics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>